--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1><a href="https://github.com/nuoyis/CDNstatic">静态分发服务</a></h1>
   <p>CDN加速静态资源(禁止上传违规违法文件)<br />
-站长博客:<a href="//blog.nuoyis.com">https://blog.nuoyis.com</a><br />
-加速站点:<a href="//static.nuoyis.com">https://static.nuoyis.com</a><br />
-备案号:<a href="//beian.miit.gov.cn">鄂ICP备2023004941号-1</a> | <img src="https://static.nuoyis.com/lib/blog/typecho/themes/butterfly/images/beian.png" alt="" />鄂公网安备<a href="//www.beian.gov.cn/portal/registerSystemInfo?recordcode=42011702000728">42011702000728</a>号<br />
+站长博客:<a href="//blog.nuoyis.com">https://blog.nuoyis.net</a><br />
+加速站点:<a href="//static.nuoyis.com">https://static.nuoyis.net</a><br />
+备案号:<a href="//beian.miit.gov.cn">鄂ICP备2023004941号-2</a> | <img src="https://static.nuoyis.com/lib/blog/typecho/themes/butterfly/images/beian.png" alt="" />鄂公网安备<a href="//www.beian.gov.cn/portal/registerSystemInfo?recordcode=42011702000752">42011702000752</a>号<br />
 本站由<img src="https://static.nuoyis.com/lib/blog/typecho/themes/butterfly/images/kudun.png" alt="酷盾安全" width="30" height="30" style="margin-bottom: 0px;"><a href="https://www.kdun.cn/" target="_blank">酷盾安全</a>提供<a href="https://www.kdun.cn/" target="_blank" rel="noopener">高防CDN</a>安全防护服务
   <p>2020 - 至今 <a href="https://www.nuoyis.com">诺依阁</a></p>
   
